# cvgl_data

./: .gitignore  CMakeLists.txt  changelog.md  readme.md  setup.py
backend/: frame.h  main.cpp
build_wheel/: build_all.sh  build_in_docker.sh
cvgl_data/: __init__.py  paired.py  prepare.py  util.py  visualize.py
data/: config.yaml
scripts/: draw_frames  draw_trajectories
scripts/prepare/: argoverse_v1  argoverse_v2  ford_avdata  kitti  kitti360  nuscenes  pandaset
scripts/prepare/ford_avdata_util/: Dockerfile  convert.launch  convert_and_save_color.launch  entrypoint.sh
